cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-missing-top-item.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule blah:
 Missing required field severity
  --> rules/invalid-rules/invalid-missing-top-item.yaml:2
   1 | rules:
   2 |   - id: blah
     |     ^
   3 |     message: blah
   4 |     languages: [python]
